lab1/Test/L1-A-13-77.output
Error Type A at Line 1
Error Type A at Line 17
Error Type A at Line 19
Error Type B at Line 23
Error Type B at Line 28
Error Type B at Line 35
